# django-concurrency

./: .coverage  .coveragerc  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS  CHANGES  LICENSE  MANIFEST.in  Makefile  Pipfile  README  README.md  README.rst  conftest.py  manage.py  pyproject.toml  requirements.pip  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yaml  tests.yaml
.tx/: config
concurrency/: __init__.py  admin.py  api.py  config.py  core.py  exceptions.py  fields.py  forms.py  http.py  middleware.py  models.py  signing.py  utils.py  views.py
concurrency/db/: compat.py
concurrency/templatetags/: concurrency.py
concurrency/tests/: __init__.py  admin_actions.py  admin_edit.py  admin_list_editable.py  all.py  api.py  base.py  conf.py  contrib_admin.py  forms.py  issues.py  middleware.py  models.py  settings.py  south_test.py  test_admin.py  test_admin_actions.py  test_admin_edit.py  test_admin_list_editable.py  test_all.py  test_api.py  test_concurrencymetainfo.py  test_forms.py  test_middleware.py  test_policy.py  test_south.py  test_triggerversionfield.py  triggers.py  urls.py
demo/: manage.py
demo/demoproject/: requirements.pip  settings.py  settings_mysql.py  settings_pg.py  settings_sqlite.py  urls.py
demoproject/: DEMODB.sqlite
demoproject/demoapp/: models.py
demoproject/demoproject/: settings.py  (+4 more)
docs/: admin.rst  api.rst  changes.rst  conf.py  cookbook.rst  faq.rst  fields.rst  globals.rst  globals.txt  help.rst  howto.rst  index.rst  install.rst  middleware.rst  project.rst  quickstart.rst  requirements.pip  settings.rst
requirements/: develop.pip  docs.pip  tests.pip
tests/: .coveragerc  __init__.py  admin.py  app_config.py  apps.py  base.py  conftest.py  dumpdata.json  models.py  settings.py  test_admin_actions.py  test_admin_edit.py  test_admin_list_editable.py  test_api.py  test_base.py  test_checks.py  test_command.py  test_concurrencymetainfo.py  test_conditional.py  test_config.py  test_core.py  test_enable_disable.py  test_fail.py  test_form.py  test_forms.py  test_functional.py  test_issues.py  test_loaddata_dumpdata.py  test_manager.py  test_middleware.py  test_reversion.py  test_templatetags.py  test_threads.p_  test_threads.py  test_triggers.py  test_triggerversionfield.py  test_utils.py  test_views.py  urls.py  util.py
(+83 files in other folders)
